[gd_scene load_steps=2 format=3 uid="uid://dfxn88lww3x3"]

[ext_resource type="Script" uid="uid://dwrvhodd8sq4c" path="res://addons/godot_asset_loader/settings_dialog.gd" id="1_settings"]

[node name="SettingsDialog" type="Window"]
title = "Asset Loader Settings"
initial_position = 2
size = Vector2i(600, 260)
exclusive = true
script = ExtResource("1_settings")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Asset Loader Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="JSONURLContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="JSONURLLabel" type="Label" parent="VBoxContainer/JSONURLContainer"]
layout_mode = 2
text = "JSON URL (Asset Library Source):"

[node name="JSONURLInput" type="LineEdit" parent="VBoxContainer/JSONURLContainer"]
layout_mode = 2
placeholder_text = "Enter URL to the JSON resources file"
clear_button_enabled = true

[node name="InfoLabel" type="Label" parent="VBoxContainer/JSONURLContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "This is the URL to the JSON file containing the asset library resources."
autowrap_mode = 3

[node name="AccessTokenContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AccessTokenLabel" type="Label" parent="VBoxContainer/AccessTokenContainer"]
layout_mode = 2
text = "Access Token (Optional):"

[node name="AccessTokenInput" type="LineEdit" parent="VBoxContainer/AccessTokenContainer"]
layout_mode = 2
placeholder_text = "Enter GitHub personal access token for private repositories"
clear_button_enabled = true
secret = true

[node name="InfoLabel" type="Label" parent="VBoxContainer/AccessTokenContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Required only for private repositories. The token will be stored locally."
autowrap_mode = 3

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Save"

[node name="Spacer" type="Control" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"
